# cortex

./: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  package.json  vite.config.ts
.claude/agents/: architecture-checker.md  docs-reviewer.md  plan-checker.md
.claude/commands/: check.md  complete-task.md  implement-task.md  review.md
docs/: CONTRIBUTING.md  README.md  SECURITY.md  cortex-development-plan.md
docs/developer/: README.md
docs/plans/: mvp-plan.md
docs/tasks-done/: task-2026-01-18-sqlite-schema-setup.md  task-2026-01-19-repository-pattern-implementation.md  task-2026-01-20-items-crud-endpoints.md  task-2026-01-21-health-check-endpoint.md  task-2026-01-22-ollama-provider-integration.md  task-2026-01-22-pytest-infrastructure.md  task-2026-01-22-repository-and-endpoint-tests.md  (+1 more)
locales/: en.json
python-backend/: .coverage  .gitignore  pyproject.toml
python-backend/src/: __init__.py  config.py  exceptions.py  main.py
python-backend/src/api/: __init__.py  deps.py  health.py  items.py
python-backend/src/db/: __init__.py  database.py  models.py  schema.sql
python-backend/src/db/repositories/: __init__.py  base.py  chunks.py  items.py
python-backend/src/providers/: __init__.py  base.py  models.py  ollama.py
python-backend/src/workflows/: __init__.py
python-backend/tests/: __init__.py  conftest.py  test_api_health.py  test_api_health_ollama.py  test_api_items.py  test_database.py  test_providers_ollama.py  test_repositories.py
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
(+74 files in other folders)
